# telescope

./: .dockerignore  .gitignore  .golangci.yml  Dockerfile  README.md  example.json  go.mod  go.sum  goo.mod  main.go  makefile  pyproject.toml
.github/workflows/: ci.yml  dockerized_ci.yml  pull_request.yml  tag.yml
telescope/: atlas.go  atlas_test.go  dependency.go  dependency_test.go  parser.go  scope.go  scope_test.go
